kubernetes/main/apps/office/meet/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: meet-backend
  namespace: office
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: meet
      app.kubernetes.io/controller: backend
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            cnpg.io/cluster: postgres-1
        - matchLabels:
            io.kubernetes.pod.namespace: database
            app: dragonfly
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            cnpg.io/cluster: postgres-1
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            app: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: meet-frontend
  namespace: office
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: meet
      app.kubernetes.io/controller: frontend
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: meet-livekit
  namespace: office
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: meet
      app.kubernetes.io/controller: livekit
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "7880"
              protocol: TCP
    - fromCIDRSet:
        - cidr: "${HOME_CIDR}"
        - cidr: "${VPN_CIDR}"
        - cidr: "${MGMT_CIDR}"
        - cidr: "${NODE_CIDR}"
      toPorts: &media
        - ports:
            - port: "7881"
              protocol: TCP
            - port: "7882"
              protocol: UDP
    - fromEntities:
        - host
        - remote-node
      toPorts: *media
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
